# thistle-os

./: .gitignore  .gitmodules  .semgrepignore  .trivyignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  QUESTIONS.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  loop.md  partitions.csv  personas.md  pico.save  ralph-loop-log.md  sdkconfig.defaults
app_sdk/: CMakeLists.txt
app_sdk/examples/hello_world/: CMakeLists.txt  main.c
app_sdk/include/: thistle_app.h  thistle_driver.h
components/apps_builtin/: CMakeLists.txt
components/apps_builtin/appstore/: appstore_app.c  appstore_app.h  appstore_ui.c
components/apps_builtin/assistant/: assistant_app.c  assistant_app.h  assistant_ui.c
components/apps_builtin/file_manager/: filemgr_app.c  filemgr_app.h  filemgr_ui.c
components/apps_builtin/flashlight/: flashlight_app.c  flashlight_app.h  flashlight_ui.c
components/apps_builtin/ghostterm/: ghostterm_app.c  ghostterm_app.h  ghostterm_ui.c
components/apps_builtin/launcher/: launcher_app.c  launcher_app.h  launcher_ui.c
components/apps_builtin/messenger/: messenger_app.c  messenger_app.h  messenger_kernel.h  messenger_transport.c  messenger_transport.h  messenger_ui.c
components/apps_builtin/navigator/: navigator_app.c  navigator_app.h  navigator_ui.c
components/apps_builtin/notes/: notes_app.c  notes_app.h  notes_ui.c
components/apps_builtin/reader/: reader_app.c  reader_app.h  reader_ui.c
components/apps_builtin/settings/: settings_app.c  settings_app.h  settings_ui.c
components/apps_builtin/terminal/: terminal_app.c  terminal_app.h  terminal_ui.c
components/apps_builtin/vault/: vault_app.c  vault_app.h  vault_ui.c
components/apps_builtin/weather/: weather_app.c  weather_app.h  weather_ui.c
components/apps_builtin/wifiscanner/: wifiscanner_app.c  wifiscanner_app.h  wifiscanner_ui.c
components/board_tdeck_pro/: CMakeLists.txt
components/board_tdeck_pro/include/: board_tdeck_pro.h
components/board_tdeck_pro/src/: board_tdeck_pro.c
components/drv_crypto_mbedtls/: CMakeLists.txt
components/drv_crypto_mbedtls/include/: drv_crypto_mbedtls.h
components/drv_crypto_mbedtls/src/: drv_crypto_mbedtls.c
components/drv_radio_sx1262/: CMakeLists.txt  idf_component.yml
components/drv_radio_sx1262/include/: drv_radio_sx1262.h
components/drv_radio_sx1262/src/: drv_radio_sx1262.c  drv_radio_sx1262.cpp
components/kernel/: CMakeLists.txt  idf_component.yml
components/kernel/src/: app_manager.c  appstore_client.c  ble_manager.c  board_builtin_drivers.c  board_config.c  board_fallback.c  display_server.c  driver_loader.c  driver_manager.c  elf_loader.c  event.c  ipc.c  kernel.c  kernel_shims.c  link_deps.c  manifest.c  net_manager.c  ota.c  permissions.c  sdcard_shim.c  signing.c  syscall_table.c  tk_wm_shims.c  wifi_manager.c
components/kernel_rs/: CMakeLists.txt  Cargo.toml  INTERFACES.md  build.rs  epaper_spi_shim.c  stub.c
components/kernel_rs/.cargo/: config.toml
components/kernel_rs/src/: app_manager.rs  appstore_client.rs  ble_manager.rs  ble_scanner.rs  board_config.rs  burn_timer.rs  contact_manager.rs  crypto.rs  data_logger.rs  display_server.rs  driver_loader.rs  driver_manager.rs  driver_reload.rs  drv_accel_qmi8658.rs  drv_audio_pcm5102a.rs  drv_display_co5300.rs  drv_epaper_gdeq031t10.rs  drv_gps_mia_m10q.rs  drv_imu_bhi260ap.rs  drv_kbd_cardkb.rs  drv_kbd_tca8418.rs  drv_lcd_ili9341.rs  drv_lcd_st7789.rs  drv_light_ltr553.rs  drv_oled_ssd1306.rs  drv_power_tp4065b.rs  drv_rtc_pcf8563.rs  drv_sdcard.rs  drv_touch_cst328.rs  drv_touch_cst816.rs  drv_touch_cst9217.rs  drv_touch_ft3x68.rs  drv_touch_xpt2046.rs  elf_loader.rs  event.rs  ffi.rs  gps_track.rs  hal_registry.rs  ipc.rs  kernel_boot.rs  (+22 more)
components/meshcore/: CMakeLists.txt
components/meshcore/include/: AES.h  Arduino.h  Ed25519.h  FS.h  SHA256.h  Stream.h  base64.hpp  ed_25519.h  meshcore_shim.h
components/meshcore/src/: meshcore_shim.cpp
components/test_thistle/: CMakeLists.txt  Kconfig  test_app_manager.c  test_appstore_client.c  test_driver_loader.c  test_driver_vtable.c  test_epaper_refresh.c  test_event_bus.c  test_hal_registry.c  test_ipc.c  test_kernel_integration.c  test_net_manager.c  test_ota.c  test_permissions.c  test_signing.c  test_syscall_table.c  test_wifi_manager.c
components/ui/: CMakeLists.txt  idf_component.yml
components/ui/src/: app_switcher.c  epaper_refresh.c  lvgl_wm.c  (+7 more)
driver_sdk/: CMakeLists.txt
driver_sdk/include/: thistle_driver.h
recovery/: CMakeLists.txt  Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
recovery/.cargo/: config.toml
recovery/main/: CMakeLists.txt  main.c
recovery/src/: main.rs  recovery_ota.rs  recovery_web.rs
simulator/: CMakeLists.txt  README.md  board_simulator.c  build_host_drivers.sh  lv_conf.h  main.c  sim_assert.c  sim_assert.h
simulator/devices/: dev_cst328.c  dev_ltr553.c  dev_pcf8563.c  dev_qmi8658c.c  dev_tca8418.c  sim_devices.h
simulator/drivers/: sim_audio.c  sim_audio.h  sim_ble.c  sim_ble.h  sim_display.c  sim_display.h  sim_gps.c  sim_gps.h  sim_imu.c  sim_imu.h  sim_input.c  sim_input.h  sim_network.c  sim_power.c  sim_power.h  sim_radio.c  sim_radio.h  sim_rtc.c  sim_rtc.h  sim_scenario.c  sim_scenario.h  sim_storage.c  sim_storage.h  sim_wifi.c  sim_wifi.h
simulator/platform/: drv_modem_a7682e.h  esp_check.h  esp_crt_bundle.h  esp_err.h  esp_heap_caps.h  esp_http_client.h  esp_log.h  esp_system.h  esp_timer.h  esp_vfs_fat.h  platform_stubs.c  sdmmc_cmd.h  sim_http.c  sim_http.h  sim_i2c_bus.c  sim_i2c_bus.h  sim_spi_bus.c  sim_spi_bus.h  sim_vfs.c  sim_vfs.h
simulator/tests/: boot_assertions.txt  driver_init_assertions.txt  hal_complete_assertions.txt  minimal_device_assertions.txt  radio_gps_assertions.txt  run_integration_tests.sh  scenario_assertions.txt  test_i2c_bus.c  test_runner.h  test_scenario.json  test_sim_assert.c  test_sim_main.c
standalone_apps/ghostterm/: CMakeLists.txt  main.c  manifest.json
standalone_apps/terminal/: CMakeLists.txt  main.c  manifest.json
wasm/: CMakeLists.txt  main.c  platform_stubs.c  shell.html
(+230 files in other folders)
