[package]
name = "thistle-recovery"
version = "0.1.0"
authors = ["ThistleOS Contributors"]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
esp-idf-hal = "0.46"
esp-idf-svc = { version = "0.52", features = ["experimental"] }
esp-idf-sys = { version = "0.37", features = ["binstart"] }
log = "0.4"
embedded-svc = "0.29"
anyhow = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"
lto = true
