idf_component_register(
    SRCS
        "launcher/launcher_app.c"
        "launcher/launcher_ui.c"
        "settings/settings_app.c"
        "settings/settings_ui.c"
        "file_manager/filemgr_app.c"
        "file_manager/filemgr_ui.c"
        "reader/reader_app.c"
        "reader/reader_ui.c"
        "messenger/messenger_app.c"
        "messenger/messenger_transport.c"
        "messenger/messenger_ui.c"
        "navigator/navigator_app.c"
        "navigator/navigator_ui.c"
        "notes/notes_app.c"
        "notes/notes_ui.c"
        "appstore/appstore_app.c"
        "appstore/appstore_ui.c"
        "assistant/assistant_app.c"
        "assistant/assistant_ui.c"
        "wifiscanner/wifiscanner_app.c"
        "wifiscanner/wifiscanner_ui.c"
        "flashlight/flashlight_app.c"
        "flashlight/flashlight_ui.c"
        "weather/weather_app.c"
        "weather/weather_ui.c"
        "terminal/terminal_app.c"
        "terminal/terminal_ui.c"
        "vault/vault_app.c"
        "vault/vault_ui.c"
    INCLUDE_DIRS "."
    REQUIRES kernel ui thistle_hal mbedtls esp_http_client
)
