[package]
name = "thistle-kernel"
version = "0.1.0"
authors = ["ThistleOS Contributors"]
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["staticlib"]

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
curve25519-dalek = { version = "4", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
getrandom = { version = "0.2", default-features = false, features = ["std"] }
thistle-tk = { path = "../../crates/thistle-tk" }
embedded-graphics = "0.8"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"
lto = false
codegen-units = 16
